@@ -6,6 +6,10 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_autoindex: Fix inheritance of mod_autoindex directives into 
+     contexts that don't have any mod_autoindex directives. PR47766.
+     [Eric Covener]
+
   *) mod_rewrite: Add END flag for RewriteRule to prevent further rounds
      of rewrite processing when a per-directory substitution occurs.
      [Eric Covener]
